Modified Digital Companion V0.1

--- a/CodeRelease2020_07_31/Android_app/DigitalCompanionv0.1/app/src/main/res/layout/fragment_home.xml
+++ b/CodeRelease2020_07_31/Android_app/DigitalCompanionv0.1/app/src/main/res/layout/fragment_home.xml
@@ -457,6 +457,7 @@
                                 android:textSize="20sp" />
 
                             <TextView
+                                android:id="@+id/activity_text"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center"
@@ -495,11 +496,12 @@
                                 android:textSize="20sp" />
 
                             <TextView
+                                android:id="@+id/location_text"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center"
                                 android:layout_marginBottom="5dp"
-                                android:text="(1.0, 1.0)"
+                                android:text="(0.0, 0.0)"
                                 android:textSize="18sp" />
 
                         </LinearLayout>
